crates/kul-core/tests/snapshots/resolve__direct_parent_is_one_lineal_descriptor.snap
---
source: crates/kul-core/tests/resolve.rs
assertion_line: 88
expression: "envelope_json(&check, \"akiko\", \"hiroshi\", &default())"
---
{
  "ok": true,
  "result": {
    "relationships": [
      {
        "egoId": "akiko",
        "alterId": "hiroshi",
        "egoGender": "female",
        "alterGender": "male",
        "classification": {
          "kind": "lineal",
          "role": "ancestor",
          "generations": 1
        },
        "edgeNature": "blood",
        "affinity": "blood",
        "sharing": "notApplicable",
        "side": "notApplicable",
        "seniority": "elder",
        "apexSeniority": "notApplicable",
        "path": [
          {
            "step": "up",
            "to": "hiroshi",
            "gender": "male",
            "edge": "bio"
          }
        ]
      }
    ]
  }
}
