crates/kul-core/tests/snapshots/resolve__disconnected_pair_reports_disconnected.snap
---
source: crates/kul-core/tests/resolve.rs
assertion_line: 96
expression: "envelope_json(&check, \"minjun\", \"lucas\", &default())"
---
{
  "ok": true,
  "result": {
    "relationships": [],
    "emptyReason": "disconnected"
  }
}
