crates/kul-core/tests/snapshots/resolve__same_component_beyond_cap_reports_none_within_bounds.snap
---
source: crates/kul-core/tests/resolve.rs
assertion_line: 105
expression: "envelope_json(&check, \"tobi\", \"ife\", &cap(1))"
---
{
  "ok": true,
  "result": {
    "relationships": [],
    "emptyReason": "noneWithinBounds"
  }
}
